Kaggle Notebook | mcts-catboost-baseline | Version 12

--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "690ee922",
+   "id": "751168cb",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:41.653281Z",
-     "iopub.status.busy": "2024-11-15T15:23:41.652836Z",
-     "iopub.status.idle": "2024-11-15T15:23:45.019266Z",
-     "shell.execute_reply": "2024-11-15T15:23:45.017943Z"
+     "iopub.execute_input": "2024-11-15T17:20:23.256232Z",
+     "iopub.status.busy": "2024-11-15T17:20:23.255786Z",
+     "iopub.status.idle": "2024-11-15T17:20:26.122408Z",
+     "shell.execute_reply": "2024-11-15T17:20:26.121119Z"
     },
     "papermill": {
-     "duration": 3.376274,
-     "end_time": "2024-11-15T15:23:45.022642",
+     "duration": 2.875619,
+     "end_time": "2024-11-15T17:20:26.124984",
      "exception": false,
-     "start_time": "2024-11-15T15:23:41.646368",
+     "start_time": "2024-11-15T17:20:23.249365",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97e6be17",
+   "id": "d892f841",
    "metadata": {
     "papermill": {
-     "duration": 0.004057,
-     "end_time": "2024-11-15T15:23:45.031427",
+     "duration": 0.00397,
+     "end_time": "2024-11-15T17:20:26.133556",
      "exception": false,
-     "start_time": "2024-11-15T15:23:45.027370",
+     "start_time": "2024-11-15T17:20:26.129586",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8e06f01e",
+   "id": "fbbd7de5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:45.042706Z",
-     "iopub.status.busy": "2024-11-15T15:23:45.041565Z",
-     "iopub.status.idle": "2024-11-15T15:23:52.017133Z",
-     "shell.execute_reply": "2024-11-15T15:23:52.015935Z"
+     "iopub.execute_input": "2024-11-15T17:20:26.143528Z",
+     "iopub.status.busy": "2024-11-15T17:20:26.142976Z",
+     "iopub.status.idle": "2024-11-15T17:20:33.354412Z",
+     "shell.execute_reply": "2024-11-15T17:20:33.353438Z"
     },
     "papermill": {
-     "duration": 6.984389,
-     "end_time": "2024-11-15T15:23:52.020238",
+     "duration": 7.219577,
+     "end_time": "2024-11-15T17:20:33.357209",
      "exception": false,
-     "start_time": "2024-11-15T15:23:45.035849",
+     "start_time": "2024-11-15T17:20:26.137632",
      "status": "completed"
     },
     "tags": []
@@ -100,19 +100,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5575344d",
+   "id": "d2685510",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:52.031633Z",
-     "iopub.status.busy": "2024-11-15T15:23:52.031163Z",
-     "iopub.status.idle": "2024-11-15T15:23:52.047732Z",
-     "shell.execute_reply": "2024-11-15T15:23:52.046397Z"
+     "iopub.execute_input": "2024-11-15T17:20:33.368272Z",
+     "iopub.status.busy": "2024-11-15T17:20:33.367481Z",
+     "iopub.status.idle": "2024-11-15T17:20:33.381982Z",
+     "shell.execute_reply": "2024-11-15T17:20:33.380984Z"
     },
     "papermill": {
-     "duration": 0.02539,
-     "end_time": "2024-11-15T15:23:52.050272",
+     "duration": 0.023388,
+     "end_time": "2024-11-15T17:20:33.385010",
      "exception": false,
-     "start_time": "2024-11-15T15:23:52.024882",
+     "start_time": "2024-11-15T17:20:33.361622",
      "status": "completed"
     },
     "tags": []
@@ -122,7 +122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 370\n",
+      "len(numerical_cols): 368\n",
       "len(categorical_cols): 5\n"
      ]
     }
@@ -167,7 +167,7 @@
     "            self.encoder,\n",
     "            self.scaler,\n",
     "            include_position_features=True,\n",
-    "            include_text_features=True,\n",
+    "            include_text_features=False,\n",
     "        )\n",
     "        \n",
     "        # Create CatBoost Pool for test data\n",
@@ -197,11 +197,12 @@
     "\n",
     "model_catboost = ModelInference(\n",
     "    # models=catboost_artifacts[\"models\"][:5],\n",
-    "    models=catboost_artifacts[\"models\"][5:10],\n",
+    "    # models=catboost_artifacts[\"models\"][5:10],\n",
     "    # models=catboost_artifacts[\"models\"][10:],\n",
+    "    models=catboost_artifacts[\"models\"],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
     "    categorical_cols=catboost_artifacts[\"categorical_cols\"],\n",
-    "    text_cols=[\"LudRules\"],\n",
+    "    # text_cols=[\"LudRules\"],\n",
     "    encoder=catboost_artifacts[\"encoder\"],\n",
     "    scaler=catboost_artifacts[\"scaler\"],\n",
     ")"
@@ -210,19 +211,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a121960b",
+   "id": "b4802005",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:52.061806Z",
-     "iopub.status.busy": "2024-11-15T15:23:52.060754Z",
-     "iopub.status.idle": "2024-11-15T15:23:52.331804Z",
-     "shell.execute_reply": "2024-11-15T15:23:52.330641Z"
+     "iopub.execute_input": "2024-11-15T17:20:33.395389Z",
+     "iopub.status.busy": "2024-11-15T17:20:33.394985Z",
+     "iopub.status.idle": "2024-11-15T17:20:33.675585Z",
+     "shell.execute_reply": "2024-11-15T17:20:33.674460Z"
     },
     "papermill": {
-     "duration": 0.279666,
-     "end_time": "2024-11-15T15:23:52.334443",
+     "duration": 0.288732,
+     "end_time": "2024-11-15T17:20:33.678185",
      "exception": false,
-     "start_time": "2024-11-15T15:23:52.054777",
+     "start_time": "2024-11-15T17:20:33.389453",
      "status": "completed"
     },
     "tags": []
@@ -231,7 +232,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.12788921, -0.14952589, -0.03809009])"
+       "array([ 0.11576947, -0.13905684, -0.0580228 ])"
       ]
      },
      "execution_count": 4,
@@ -247,13 +248,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd74c83",
+   "id": "45faf5cf",
    "metadata": {
     "papermill": {
-     "duration": 0.004397,
-     "end_time": "2024-11-15T15:23:52.343535",
+     "duration": 0.00436,
+     "end_time": "2024-11-15T17:20:33.687311",
      "exception": false,
-     "start_time": "2024-11-15T15:23:52.339138",
+     "start_time": "2024-11-15T17:20:33.682951",
      "status": "completed"
     },
     "tags": []
@@ -266,19 +267,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6014d356",
+   "id": "4d98b29e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:52.355259Z",
-     "iopub.status.busy": "2024-11-15T15:23:52.354359Z",
-     "iopub.status.idle": "2024-11-15T15:23:52.942809Z",
-     "shell.execute_reply": "2024-11-15T15:23:52.941631Z"
+     "iopub.execute_input": "2024-11-15T17:20:33.698812Z",
+     "iopub.status.busy": "2024-11-15T17:20:33.698008Z",
+     "iopub.status.idle": "2024-11-15T17:20:34.187646Z",
+     "shell.execute_reply": "2024-11-15T17:20:34.186662Z"
     },
     "papermill": {
-     "duration": 0.597391,
-     "end_time": "2024-11-15T15:23:52.945748",
+     "duration": 0.498521,
+     "end_time": "2024-11-15T17:20:34.190428",
      "exception": false,
-     "start_time": "2024-11-15T15:23:52.348357",
+     "start_time": "2024-11-15T17:20:33.691907",
      "status": "completed"
     },
     "tags": []
@@ -293,19 +294,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dafb6692",
+   "id": "e59a4170",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:52.957059Z",
-     "iopub.status.busy": "2024-11-15T15:23:52.956432Z",
-     "iopub.status.idle": "2024-11-15T15:23:52.962673Z",
-     "shell.execute_reply": "2024-11-15T15:23:52.961651Z"
+     "iopub.execute_input": "2024-11-15T17:20:34.202499Z",
+     "iopub.status.busy": "2024-11-15T17:20:34.201417Z",
+     "iopub.status.idle": "2024-11-15T17:20:34.207715Z",
+     "shell.execute_reply": "2024-11-15T17:20:34.206649Z"
     },
     "papermill": {
-     "duration": 0.01466,
-     "end_time": "2024-11-15T15:23:52.965143",
+     "duration": 0.014862,
+     "end_time": "2024-11-15T17:20:34.210192",
      "exception": false,
-     "start_time": "2024-11-15T15:23:52.950483",
+     "start_time": "2024-11-15T17:20:34.195330",
      "status": "completed"
     },
     "tags": []
@@ -322,19 +323,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9852e43f",
+   "id": "4b7fc92b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:52.976395Z",
-     "iopub.status.busy": "2024-11-15T15:23:52.975989Z",
-     "iopub.status.idle": "2024-11-15T15:23:53.792161Z",
-     "shell.execute_reply": "2024-11-15T15:23:53.790999Z"
+     "iopub.execute_input": "2024-11-15T17:20:34.222287Z",
+     "iopub.status.busy": "2024-11-15T17:20:34.221799Z",
+     "iopub.status.idle": "2024-11-15T17:20:34.892012Z",
+     "shell.execute_reply": "2024-11-15T17:20:34.890940Z"
     },
     "papermill": {
-     "duration": 0.825269,
-     "end_time": "2024-11-15T15:23:53.795107",
+     "duration": 0.679596,
+     "end_time": "2024-11-15T17:20:34.894911",
      "exception": false,
-     "start_time": "2024-11-15T15:23:52.969838",
+     "start_time": "2024-11-15T17:20:34.215315",
      "status": "completed"
     },
     "tags": []
@@ -356,13 +357,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00172371",
+   "id": "09a761cf",
    "metadata": {
     "papermill": {
-     "duration": 0.004402,
-     "end_time": "2024-11-15T15:23:53.804392",
+     "duration": 0.004295,
+     "end_time": "2024-11-15T17:20:34.903953",
      "exception": false,
-     "start_time": "2024-11-15T15:23:53.799990",
+     "start_time": "2024-11-15T17:20:34.899658",
      "status": "completed"
     },
     "tags": []
@@ -382,9 +383,8 @@
      "sourceType": "competition"
     },
     {
-     "databundleVersionId": 10175295,
      "datasetId": 5909723,
-     "sourceId": 9916850,
+     "sourceId": 9917814,
      "sourceType": "datasetVersion"
     }
    ],
@@ -413,14 +413,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 16.146916,
-   "end_time": "2024-11-15T15:23:54.631915",
+   "duration": 15.490662,
+   "end_time": "2024-11-15T17:20:35.729720",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-15T15:23:38.484999",
+   "start_time": "2024-11-15T17:20:20.239058",
    "version": "2.6.0"
   }
  },
