Kaggle Notebook | mcts-catboost-baseline | Version 14

--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "751168cb",
+   "id": "45dd5de6",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-15T17:20:23.256232Z",
-     "iopub.status.busy": "2024-11-15T17:20:23.255786Z",
-     "iopub.status.idle": "2024-11-15T17:20:26.122408Z",
-     "shell.execute_reply": "2024-11-15T17:20:26.121119Z"
+     "iopub.execute_input": "2024-11-16T17:20:55.609532Z",
+     "iopub.status.busy": "2024-11-16T17:20:55.609069Z",
+     "iopub.status.idle": "2024-11-16T17:20:59.555494Z",
+     "shell.execute_reply": "2024-11-16T17:20:59.553739Z"
     },
     "papermill": {
-     "duration": 2.875619,
-     "end_time": "2024-11-15T17:20:26.124984",
+     "duration": 3.956105,
+     "end_time": "2024-11-16T17:20:59.558398",
      "exception": false,
-     "start_time": "2024-11-15T17:20:23.249365",
+     "start_time": "2024-11-16T17:20:55.602293",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d892f841",
+   "id": "e1d6776b",
    "metadata": {
     "papermill": {
-     "duration": 0.00397,
-     "end_time": "2024-11-15T17:20:26.133556",
+     "duration": 0.004565,
+     "end_time": "2024-11-16T17:20:59.568562",
      "exception": false,
-     "start_time": "2024-11-15T17:20:26.129586",
+     "start_time": "2024-11-16T17:20:59.563997",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fbbd7de5",
+   "id": "5f65fbd9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T17:20:26.143528Z",
-     "iopub.status.busy": "2024-11-15T17:20:26.142976Z",
-     "iopub.status.idle": "2024-11-15T17:20:33.354412Z",
-     "shell.execute_reply": "2024-11-15T17:20:33.353438Z"
+     "iopub.execute_input": "2024-11-16T17:20:59.580474Z",
+     "iopub.status.busy": "2024-11-16T17:20:59.579808Z",
+     "iopub.status.idle": "2024-11-16T17:21:08.618970Z",
+     "shell.execute_reply": "2024-11-16T17:21:08.617810Z"
     },
     "papermill": {
-     "duration": 7.219577,
-     "end_time": "2024-11-15T17:20:33.357209",
+     "duration": 9.049144,
+     "end_time": "2024-11-16T17:21:08.622535",
      "exception": false,
-     "start_time": "2024-11-15T17:20:26.137632",
+     "start_time": "2024-11-16T17:20:59.573391",
      "status": "completed"
     },
     "tags": []
@@ -100,19 +100,55 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d2685510",
+   "id": "778a01d1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T17:20:33.368272Z",
-     "iopub.status.busy": "2024-11-15T17:20:33.367481Z",
-     "iopub.status.idle": "2024-11-15T17:20:33.381982Z",
-     "shell.execute_reply": "2024-11-15T17:20:33.380984Z"
+     "iopub.execute_input": "2024-11-16T17:21:08.638984Z",
+     "iopub.status.busy": "2024-11-16T17:21:08.637340Z",
+     "iopub.status.idle": "2024-11-16T17:21:08.655554Z",
+     "shell.execute_reply": "2024-11-16T17:21:08.650966Z"
     },
     "papermill": {
-     "duration": 0.023388,
-     "end_time": "2024-11-15T17:20:33.385010",
+     "duration": 0.030125,
+     "end_time": "2024-11-16T17:21:08.659469",
      "exception": false,
-     "start_time": "2024-11-15T17:20:33.361622",
+     "start_time": "2024-11-16T17:21:08.629344",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(catboost_artifacts[\"models\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6b7e6ea9",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-16T17:21:08.674981Z",
+     "iopub.status.busy": "2024-11-16T17:21:08.674472Z",
+     "iopub.status.idle": "2024-11-16T17:21:08.691226Z",
+     "shell.execute_reply": "2024-11-16T17:21:08.689759Z"
+    },
+    "papermill": {
+     "duration": 0.028416,
+     "end_time": "2024-11-16T17:21:08.694621",
+     "exception": false,
+     "start_time": "2024-11-16T17:21:08.666205",
      "status": "completed"
     },
     "tags": []
@@ -197,9 +233,9 @@
     "\n",
     "model_catboost = ModelInference(\n",
     "    # models=catboost_artifacts[\"models\"][:5],\n",
-    "    # models=catboost_artifacts[\"models\"][5:10],\n",
+    "    models=catboost_artifacts[\"models\"][5:10],\n",
     "    # models=catboost_artifacts[\"models\"][10:],\n",
-    "    models=catboost_artifacts[\"models\"],\n",
+    "    # models=catboost_artifacts[\"models\"],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
     "    categorical_cols=catboost_artifacts[\"categorical_cols\"],\n",
     "    # text_cols=[\"LudRules\"],\n",
@@ -210,20 +246,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "b4802005",
+   "execution_count": 5,
+   "id": "bd13a8a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T17:20:33.395389Z",
-     "iopub.status.busy": "2024-11-15T17:20:33.394985Z",
-     "iopub.status.idle": "2024-11-15T17:20:33.675585Z",
-     "shell.execute_reply": "2024-11-15T17:20:33.674460Z"
+     "iopub.execute_input": "2024-11-16T17:21:08.710588Z",
+     "iopub.status.busy": "2024-11-16T17:21:08.710040Z",
+     "iopub.status.idle": "2024-11-16T17:21:08.997425Z",
+     "shell.execute_reply": "2024-11-16T17:21:08.996166Z"
     },
     "papermill": {
-     "duration": 0.288732,
-     "end_time": "2024-11-15T17:20:33.678185",
+     "duration": 0.298853,
+     "end_time": "2024-11-16T17:21:09.000584",
      "exception": false,
-     "start_time": "2024-11-15T17:20:33.389453",
+     "start_time": "2024-11-16T17:21:08.701731",
      "status": "completed"
     },
     "tags": []
@@ -232,10 +268,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.11576947, -0.13905684, -0.0580228 ])"
+       "array([ 0.12662478, -0.16927704, -0.0580261 ])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,13 +284,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45faf5cf",
+   "id": "a46f795a",
    "metadata": {
     "papermill": {
-     "duration": 0.00436,
-     "end_time": "2024-11-15T17:20:33.687311",
+     "duration": 0.005192,
+     "end_time": "2024-11-16T17:21:09.011122",
      "exception": false,
-     "start_time": "2024-11-15T17:20:33.682951",
+     "start_time": "2024-11-16T17:21:09.005930",
      "status": "completed"
     },
     "tags": []
@@ -266,20 +302,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "4d98b29e",
+   "execution_count": 6,
+   "id": "d9e49197",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T17:20:33.698812Z",
-     "iopub.status.busy": "2024-11-15T17:20:33.698008Z",
-     "iopub.status.idle": "2024-11-15T17:20:34.187646Z",
-     "shell.execute_reply": "2024-11-15T17:20:34.186662Z"
+     "iopub.execute_input": "2024-11-16T17:21:09.024138Z",
+     "iopub.status.busy": "2024-11-16T17:21:09.023567Z",
+     "iopub.status.idle": "2024-11-16T17:21:09.739167Z",
+     "shell.execute_reply": "2024-11-16T17:21:09.738118Z"
     },
     "papermill": {
-     "duration": 0.498521,
-     "end_time": "2024-11-15T17:20:34.190428",
+     "duration": 0.725797,
+     "end_time": "2024-11-16T17:21:09.742553",
      "exception": false,
-     "start_time": "2024-11-15T17:20:33.691907",
+     "start_time": "2024-11-16T17:21:09.016756",
      "status": "completed"
     },
     "tags": []
@@ -293,20 +329,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e59a4170",
+   "execution_count": 7,
+   "id": "a5554c04",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T17:20:34.202499Z",
-     "iopub.status.busy": "2024-11-15T17:20:34.201417Z",
-     "iopub.status.idle": "2024-11-15T17:20:34.207715Z",
-     "shell.execute_reply": "2024-11-15T17:20:34.206649Z"
+     "iopub.execute_input": "2024-11-16T17:21:09.759220Z",
+     "iopub.status.busy": "2024-11-16T17:21:09.758467Z",
+     "iopub.status.idle": "2024-11-16T17:21:09.765703Z",
+     "shell.execute_reply": "2024-11-16T17:21:09.764402Z"
     },
     "papermill": {
-     "duration": 0.014862,
-     "end_time": "2024-11-15T17:20:34.210192",
+     "duration": 0.018316,
+     "end_time": "2024-11-16T17:21:09.768281",
      "exception": false,
-     "start_time": "2024-11-15T17:20:34.195330",
+     "start_time": "2024-11-16T17:21:09.749965",
      "status": "completed"
     },
     "tags": []
@@ -322,20 +358,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4b7fc92b",
+   "execution_count": 8,
+   "id": "2234c0a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T17:20:34.222287Z",
-     "iopub.status.busy": "2024-11-15T17:20:34.221799Z",
-     "iopub.status.idle": "2024-11-15T17:20:34.892012Z",
-     "shell.execute_reply": "2024-11-15T17:20:34.890940Z"
+     "iopub.execute_input": "2024-11-16T17:21:09.781442Z",
+     "iopub.status.busy": "2024-11-16T17:21:09.780462Z",
+     "iopub.status.idle": "2024-11-16T17:21:10.550417Z",
+     "shell.execute_reply": "2024-11-16T17:21:10.549293Z"
     },
     "papermill": {
-     "duration": 0.679596,
-     "end_time": "2024-11-15T17:20:34.894911",
+     "duration": 0.77991,
+     "end_time": "2024-11-16T17:21:10.553383",
      "exception": false,
-     "start_time": "2024-11-15T17:20:34.215315",
+     "start_time": "2024-11-16T17:21:09.773473",
      "status": "completed"
     },
     "tags": []
@@ -357,13 +393,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09a761cf",
+   "id": "6368e693",
    "metadata": {
     "papermill": {
-     "duration": 0.004295,
-     "end_time": "2024-11-15T17:20:34.903953",
+     "duration": 0.005687,
+     "end_time": "2024-11-16T17:21:10.564198",
      "exception": false,
-     "start_time": "2024-11-15T17:20:34.899658",
+     "start_time": "2024-11-16T17:21:10.558511",
      "status": "completed"
     },
     "tags": []
@@ -413,14 +449,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 15.490662,
-   "end_time": "2024-11-15T17:20:35.729720",
+   "duration": 19.185252,
+   "end_time": "2024-11-16T17:21:11.391673",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-15T17:20:20.239058",
+   "start_time": "2024-11-16T17:20:52.206421",
    "version": "2.6.0"
   }
  },
