Kaggle Notebook | mcts-catboost-baseline | Version 13

--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "45dd5de6",
+   "id": "5eff7829",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:20:55.609532Z",
-     "iopub.status.busy": "2024-11-16T17:20:55.609069Z",
-     "iopub.status.idle": "2024-11-16T17:20:59.555494Z",
-     "shell.execute_reply": "2024-11-16T17:20:59.553739Z"
+     "iopub.execute_input": "2024-11-16T17:21:28.289904Z",
+     "iopub.status.busy": "2024-11-16T17:21:28.289483Z",
+     "iopub.status.idle": "2024-11-16T17:21:31.031075Z",
+     "shell.execute_reply": "2024-11-16T17:21:31.029768Z"
     },
     "papermill": {
-     "duration": 3.956105,
-     "end_time": "2024-11-16T17:20:59.558398",
+     "duration": 2.750808,
+     "end_time": "2024-11-16T17:21:31.033733",
      "exception": false,
-     "start_time": "2024-11-16T17:20:55.602293",
+     "start_time": "2024-11-16T17:21:28.282925",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1d6776b",
+   "id": "35d04c48",
    "metadata": {
     "papermill": {
-     "duration": 0.004565,
-     "end_time": "2024-11-16T17:20:59.568562",
+     "duration": 0.00425,
+     "end_time": "2024-11-16T17:21:31.042961",
      "exception": false,
-     "start_time": "2024-11-16T17:20:59.563997",
+     "start_time": "2024-11-16T17:21:31.038711",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5f65fbd9",
+   "id": "d0368f87",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:20:59.580474Z",
-     "iopub.status.busy": "2024-11-16T17:20:59.579808Z",
-     "iopub.status.idle": "2024-11-16T17:21:08.618970Z",
-     "shell.execute_reply": "2024-11-16T17:21:08.617810Z"
+     "iopub.execute_input": "2024-11-16T17:21:31.054537Z",
+     "iopub.status.busy": "2024-11-16T17:21:31.053359Z",
+     "iopub.status.idle": "2024-11-16T17:21:36.880019Z",
+     "shell.execute_reply": "2024-11-16T17:21:36.878904Z"
     },
     "papermill": {
-     "duration": 9.049144,
-     "end_time": "2024-11-16T17:21:08.622535",
+     "duration": 5.835432,
+     "end_time": "2024-11-16T17:21:36.882867",
      "exception": false,
-     "start_time": "2024-11-16T17:20:59.573391",
+     "start_time": "2024-11-16T17:21:31.047435",
      "status": "completed"
     },
     "tags": []
@@ -100,19 +100,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "778a01d1",
+   "id": "7a8e0f0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:08.638984Z",
-     "iopub.status.busy": "2024-11-16T17:21:08.637340Z",
-     "iopub.status.idle": "2024-11-16T17:21:08.655554Z",
-     "shell.execute_reply": "2024-11-16T17:21:08.650966Z"
+     "iopub.execute_input": "2024-11-16T17:21:36.894206Z",
+     "iopub.status.busy": "2024-11-16T17:21:36.893711Z",
+     "iopub.status.idle": "2024-11-16T17:21:36.901984Z",
+     "shell.execute_reply": "2024-11-16T17:21:36.900929Z"
     },
     "papermill": {
-     "duration": 0.030125,
-     "end_time": "2024-11-16T17:21:08.659469",
+     "duration": 0.016877,
+     "end_time": "2024-11-16T17:21:36.904548",
      "exception": false,
-     "start_time": "2024-11-16T17:21:08.629344",
+     "start_time": "2024-11-16T17:21:36.887671",
      "status": "completed"
     },
     "tags": []
@@ -136,19 +136,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6b7e6ea9",
+   "id": "73e14fd1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:08.674981Z",
-     "iopub.status.busy": "2024-11-16T17:21:08.674472Z",
-     "iopub.status.idle": "2024-11-16T17:21:08.691226Z",
-     "shell.execute_reply": "2024-11-16T17:21:08.689759Z"
+     "iopub.execute_input": "2024-11-16T17:21:36.916487Z",
+     "iopub.status.busy": "2024-11-16T17:21:36.915379Z",
+     "iopub.status.idle": "2024-11-16T17:21:36.930081Z",
+     "shell.execute_reply": "2024-11-16T17:21:36.929055Z"
     },
     "papermill": {
-     "duration": 0.028416,
-     "end_time": "2024-11-16T17:21:08.694621",
+     "duration": 0.023561,
+     "end_time": "2024-11-16T17:21:36.932979",
      "exception": false,
-     "start_time": "2024-11-16T17:21:08.666205",
+     "start_time": "2024-11-16T17:21:36.909418",
      "status": "completed"
     },
     "tags": []
@@ -232,8 +232,8 @@
     "# model_catboost = ModelInference(text_cols=[\"LudRules\",], **catboost_artifacts)\n",
     "\n",
     "model_catboost = ModelInference(\n",
-    "    # models=catboost_artifacts[\"models\"][:5],\n",
-    "    models=catboost_artifacts[\"models\"][5:10],\n",
+    "    models=catboost_artifacts[\"models\"][:5],\n",
+    "    # models=catboost_artifacts[\"models\"][5:10],\n",
     "    # models=catboost_artifacts[\"models\"][10:],\n",
     "    # models=catboost_artifacts[\"models\"],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
@@ -247,19 +247,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bd13a8a7",
+   "id": "776135a6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:08.710588Z",
-     "iopub.status.busy": "2024-11-16T17:21:08.710040Z",
-     "iopub.status.idle": "2024-11-16T17:21:08.997425Z",
-     "shell.execute_reply": "2024-11-16T17:21:08.996166Z"
+     "iopub.execute_input": "2024-11-16T17:21:36.944643Z",
+     "iopub.status.busy": "2024-11-16T17:21:36.944001Z",
+     "iopub.status.idle": "2024-11-16T17:21:37.184162Z",
+     "shell.execute_reply": "2024-11-16T17:21:37.182966Z"
     },
     "papermill": {
-     "duration": 0.298853,
-     "end_time": "2024-11-16T17:21:09.000584",
+     "duration": 0.249112,
+     "end_time": "2024-11-16T17:21:37.186961",
      "exception": false,
-     "start_time": "2024-11-16T17:21:08.701731",
+     "start_time": "2024-11-16T17:21:36.937849",
      "status": "completed"
     },
     "tags": []
@@ -268,7 +268,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.12662478, -0.16927704, -0.0580261 ])"
+       "array([ 0.1216964 , -0.12935903, -0.08922361])"
       ]
      },
      "execution_count": 5,
@@ -284,13 +284,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a46f795a",
+   "id": "6874aef2",
    "metadata": {
     "papermill": {
-     "duration": 0.005192,
-     "end_time": "2024-11-16T17:21:09.011122",
+     "duration": 0.004665,
+     "end_time": "2024-11-16T17:21:37.196823",
      "exception": false,
-     "start_time": "2024-11-16T17:21:09.005930",
+     "start_time": "2024-11-16T17:21:37.192158",
      "status": "completed"
     },
     "tags": []
@@ -303,19 +303,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d9e49197",
+   "id": "a15ad607",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:09.024138Z",
-     "iopub.status.busy": "2024-11-16T17:21:09.023567Z",
-     "iopub.status.idle": "2024-11-16T17:21:09.739167Z",
-     "shell.execute_reply": "2024-11-16T17:21:09.738118Z"
+     "iopub.execute_input": "2024-11-16T17:21:37.208355Z",
+     "iopub.status.busy": "2024-11-16T17:21:37.207944Z",
+     "iopub.status.idle": "2024-11-16T17:21:37.655834Z",
+     "shell.execute_reply": "2024-11-16T17:21:37.654849Z"
     },
     "papermill": {
-     "duration": 0.725797,
-     "end_time": "2024-11-16T17:21:09.742553",
+     "duration": 0.456915,
+     "end_time": "2024-11-16T17:21:37.658608",
      "exception": false,
-     "start_time": "2024-11-16T17:21:09.016756",
+     "start_time": "2024-11-16T17:21:37.201693",
      "status": "completed"
     },
     "tags": []
@@ -330,19 +330,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a5554c04",
+   "id": "b8eb568c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:09.759220Z",
-     "iopub.status.busy": "2024-11-16T17:21:09.758467Z",
-     "iopub.status.idle": "2024-11-16T17:21:09.765703Z",
-     "shell.execute_reply": "2024-11-16T17:21:09.764402Z"
+     "iopub.execute_input": "2024-11-16T17:21:37.670745Z",
+     "iopub.status.busy": "2024-11-16T17:21:37.670184Z",
+     "iopub.status.idle": "2024-11-16T17:21:37.676454Z",
+     "shell.execute_reply": "2024-11-16T17:21:37.675294Z"
     },
     "papermill": {
-     "duration": 0.018316,
-     "end_time": "2024-11-16T17:21:09.768281",
+     "duration": 0.014967,
+     "end_time": "2024-11-16T17:21:37.678786",
      "exception": false,
-     "start_time": "2024-11-16T17:21:09.749965",
+     "start_time": "2024-11-16T17:21:37.663819",
      "status": "completed"
     },
     "tags": []
@@ -359,19 +359,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2234c0a1",
+   "id": "3f9ee431",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:09.781442Z",
-     "iopub.status.busy": "2024-11-16T17:21:09.780462Z",
-     "iopub.status.idle": "2024-11-16T17:21:10.550417Z",
-     "shell.execute_reply": "2024-11-16T17:21:10.549293Z"
+     "iopub.execute_input": "2024-11-16T17:21:37.691174Z",
+     "iopub.status.busy": "2024-11-16T17:21:37.690219Z",
+     "iopub.status.idle": "2024-11-16T17:21:38.287435Z",
+     "shell.execute_reply": "2024-11-16T17:21:38.286401Z"
     },
     "papermill": {
-     "duration": 0.77991,
-     "end_time": "2024-11-16T17:21:10.553383",
+     "duration": 0.606111,
+     "end_time": "2024-11-16T17:21:38.290036",
      "exception": false,
-     "start_time": "2024-11-16T17:21:09.773473",
+     "start_time": "2024-11-16T17:21:37.683925",
      "status": "completed"
     },
     "tags": []
@@ -393,13 +393,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6368e693",
+   "id": "a7257b06",
    "metadata": {
     "papermill": {
-     "duration": 0.005687,
-     "end_time": "2024-11-16T17:21:10.564198",
+     "duration": 0.005561,
+     "end_time": "2024-11-16T17:21:38.300557",
      "exception": false,
-     "start_time": "2024-11-16T17:21:10.558511",
+     "start_time": "2024-11-16T17:21:38.294996",
      "status": "completed"
     },
     "tags": []
@@ -449,14 +449,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 19.185252,
-   "end_time": "2024-11-16T17:21:11.391673",
+   "duration": 13.788346,
+   "end_time": "2024-11-16T17:21:39.127047",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-16T17:20:52.206421",
+   "start_time": "2024-11-16T17:21:25.338701",
    "version": "2.6.0"
   }
  },
